<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"		>Track &amp; Graph</string>
    <string name="index"		>Tracking</string>
    <string name="create"		>New</string>
    <string name="edit"			>Edit</string>
    <string name="save"         >Save</string>
    <string name="help"         >Help</string>
    <string name="delete"		>Delete</string>
    <string name="ok"           >Ok</string>
    <string name="gotcha"       >Gotcha</string>
    <string name="cancel"       >Cancel</string>
    <string name="proceed"      >Proceed</string>
    <string name="done"         >Done</string>
    <string name="back"         >Back</string>
    <string name="about"        >About Track &amp; Graph</string>
    <string name="edit_metric"	>Edit metric</string>
    <string name="delete_metric">Delete metric</string>
    <string name="add_data"		>Submit entry</string> 
    <string name="view_data"	>List entries</string>
    <string name="preview"      >Preview</string>
    <string name="preview_graph">Preview graph</string>

    <string name="theme_light"  >Day</string>
    <string name="theme_dark"   >Night</string>
    <string name="rate_app"     >Rate / Review</string>
    <string name="upgrade_app"  >Upgrade to Premium</string>
    <string name="no_thanks"    >Not right now</string>


    <string name="metric_list"  >Metric list</string>
    <string name="create_metric">New metric</string>


    <string name="first_metric_prompt_message">
        Hello! Welcome to Track &amp; Graph. To get started with your first metric, simply tap the [+].
    </string>

    <string name="confirm_delete">Confirm deletion</string>
    <string name="confirm_delete_message">
        Are you sure you want to delete this metric, and all associated data?
    </string>

    <string name="confirm_delete_datapoint">Confirm entry deletion</string>
    <string name="confirm_delete_datapoint_message">
        Are you sure you want to delete all selected entries?
    </string>

    <string name="datepicker_title_format_long">ccc, LLLLL d</string>
    
    <string name="duration_picker_separator_days">, </string>
    <string name="duration_picker_separator">:</string>
    <string name="duration_picker_separator_centisecs">.</string>
    <string name="range_picker_readout_separator"> / </string>

    <string name="days">days</string>


    <string name="widget_metric_link_title">Metric to graph</string>
    <string name="widget_no_existing_metrics">You do not have any metrics yet. Would you like to create a new one to graph?</string>
    <string name="widget_create_metric">Create new metric</string>
    <string name="widget_metric_not_found">Metric not found.\nPlease tap to reconfigure.</string>
    <string name="widget_metric_add_data_prompt">Tap here to add data!</string>



    <string name="format_duration">%2$02d:%3$02d:%4$02d</string>
    <string name="format_duration_csecs">%2$02d:%3$02d:%4$02d:%5$02d</string>
    <string name="format_duration_day_singular">%1$d day, %2$02d:%3$02d:%4$02d</string>
    <string name="format_duration_days">%1$d days, %2$02d:%3$02d:%4$02d</string>

    <string name="format_range">%1$d/%2$d</string>




    <string name="widget_value_label_total">total</string>
    <string name="widget_value_label_average">average</string>
    <string name="widget_value_label_maximum">max</string>
    <string name="widget_value_label_minimum">min</string>
    <string name="widget_value_label_cumulative">cumulative</string>

    <string name="widget_value_label_total_abrv">tot.</string>
    <string name="widget_value_label_average_abrv">avg</string>
    <string name="widget_value_label_maximum_abrv">max</string>
    <string name="widget_value_label_minimum_abrv">min</string>
    <string name="widget_value_label_cumulative_abrv">c. tot.</string>

    <string name="widget_period_label_hour">/ hour</string>
    <string name="widget_period_label_day">/ day</string>
    <string name="widget_period_label_week">/ week</string>
    <string name="widget_period_label_month">/ month</string>
    <string name="widget_period_label_year">/ year</string>


    <string name="datapoint_mass_delete">Entries to delete</string>
    <string name="no_datapoints_exist_message">
        You haven\'t made any entries to this metric yet. You can submit one now with the [+] button, if you like.
    </string>



    <string name="first_launch_title">Welcome!</string>
    <string name="first_launch_message">
        A quick disclaimer:\n\nTrack &amp; Graph reports some simple, anonymous usage info via Google Analytics. This is strictly to inform improvements to future versions, and will not be used in any other way. You can disable this behaviour from the About screen.\n\nHappy Tracking!
    </string>


</resources>



