<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item 
		android:id="@+id/help"
		android:icon="?attr/icon_help"
		android:title="@string/help"
		android:showAsAction="ifRoom" />

	<item 
		android:id="@+id/delete"
		android:icon="?attr/icon_delete"
		android:title="@string/delete"
		android:showAsAction="always" />

	<item 
		android:id="@+id/done"
		android:icon="?attr/icon_accept"
		android:title="@string/done"
		android:showAsAction="always" />


	<!-- context menu -->
	<item 
		android:id="@+id/preview_graph"
		android:title="@string/preview_graph"
		android:showAsAction="never"/>	

	<item 
		android:id="@+id/view_data"
		android:title="@string/view_data"
		android:showAsAction="never"/>

	<item 
		android:id="@+id/add_data"
		android:title="@string/add_data"
		android:showAsAction="never"/>		

</menu>